# cmake_tutorial

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
say-hello/: CMakeLists.txt  hello.c  hello.h
